force-app/main/default/objects/Grant_Disbursement__c/Grant_Disbursement__c.object-meta.xml
<CustomObject>
    <description>Stores monthly grant disbursement records for eligible applicants.</description>
    <label>Grant Disbursement</label>
    <nameField>
        <displayFormat>GD-{00000}</displayFormat>
        <label>Grant Disbursement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>