force-app/main/default/objects/Grant_Disbursement__c/fields/Grant_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Grant_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Grant Disbursements</relationshipLabel>
    <relationshipName>Grant_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>