force-app/main/default/objects/Grant_Disbursement__c/fields/Grant_is_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Grant_is_Disbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant is Disbursed</label>
    <type>Checkbox</type>
</CustomField>