force-app/main/default/objects/Grant_Disbursement__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Identifies the monthly disbursement sequence and supports payment schedule recalculation.</description>
    <label>Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>