force-app/main/default/objects/Grant_Disbursement__c/fields/Support_Option__c.field-meta.xml
<CustomField>
    <fullName>Support_Option__c</fullName>
    <description>Identifies the support option under which this disbursement record was created.</description>
    <label>Support Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>